--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="export/android/RiverRush.aab"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -26,7 +26,7 @@ gradle_build/use_gradle_build=true
 gradle_build/gradle_build_directory=""
 gradle_build/android_source_template=""
 gradle_build/compress_native_libraries=true
-gradle_build/export_format=0
+gradle_build/export_format=1
 gradle_build/min_sdk=""
 gradle_build/target_sdk=""
 architectures/armeabi-v7a=true
@@ -35,7 +35,7 @@ architectures/x86=true
 architectures/x86_64=true
 version/code=10
 version/name="0.1.0"
-package/unique_name="com.teqanta.riverrush"
+package/unique_name="com.gerstudio.riverrush"
 package/name="River Rush"
 package/signed=true
 package/app_category=2
@@ -44,7 +44,7 @@ package/exclude_from_recents=false
 package/show_in_android_tv=false
 package/show_in_app_library=true
 package/show_as_launcher_app=false
-launcher_icons/main_192x192=""
+launcher_icons/main_192x192="uid://12i0rfirbuv3"
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
 launcher_icons/adaptive_monochrome_432x432=""
@@ -56,7 +56,7 @@ screen/support_small=true
 screen/support_normal=true
 screen/support_large=true
 screen/support_xlarge=true
-user_data_backup/allow=false
+user_data_backup/allow=true
 command_line/extra_args=""
 apk_expansion/enable=false
 apk_expansion/SALT=""
@@ -129,7 +129,7 @@ permissions/install_location_provider=false
 permissions/install_packages=false
 permissions/install_shortcut=false
 permissions/internal_system_window=false
-permissions/internet=false
+permissions/internet=true
 permissions/kill_background_processes=false
 permissions/location_hardware=false
 permissions/manage_accounts=false
