--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/android/RiverRush.aab"
+export_path="export/android/RiverRush_0.1.2.aab"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -33,9 +33,9 @@ architectures/armeabi-v7a=true
 architectures/arm64-v8a=true
 architectures/x86=true
 architectures/x86_64=true
-version/code=20
-version/name="0.2.0"
-package/unique_name="com.gerstudio.riverrush"
+version/code=13
+version/name="0.1.3"
+package/unique_name="com.gerstudio.riverrushbeta"
 package/name="River Rush"
 package/signed=true
 package/app_category=2
