feat(sound): add sound manager and integrate sound effects
Introduce a sound manager to handle background music and sound effects. Add sound effects for dice roll and ensure background music plays on game start. Update export presets and add necessary audio resources.

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/android/RiverRush_0.1.2.aab"
+export_path="export/android/RiverRush_0.1.3.aab"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -35,7 +35,7 @@ architectures/x86=true
 architectures/x86_64=true
 version/code=13
 version/name="0.1.3"
-package/unique_name="com.gerstudio.riverrushbeta"
+package/unique_name="com.gerstudio.riverrush"
 package/name="River Rush"
 package/signed=true
 package/app_category=2
